epochX/cudacpp/tput/logs_susyggtt_mad/log_susyggtt_mad_d_inl0_hrd1.txt

Building in /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/susy_gg_tt.mad/SubProcesses/P1_gg_ttx
BACKEND=cppavx2 (was cppauto)
OMPFLAGS=
FPTYPE='d'
HELINL='0'
HRDCOD='0'
HASCURAND=hasNoCurand
HASHIPRAND=hasNoHiprand
Building in BUILDDIR=build.auto_d_inl0_hrd0 for tag=avx2_d_inl0_hrd0_hasNoCurand_hasNoHiprand (USEBUILDDIR == 1)
make: Nothing to be done for 'gtestlibs'.
make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

make: Nothing to be done for 'all'.

DATE: 2024-09-17_09:25:13

On uan01 [CPU: AMD EPYC 7A53 64-Core Processor] [GPU: AMD INSTINCT MI200]:
=========================================================================
runExe /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/susy_gg_tt.mad/SubProcesses/P1_gg_ttx/build.hip_d_inl0_hrd1/check_hip.exe -p 2048 256 2 OMP=
INFO: The following Floating Point Exceptions will cause SIGFPE program aborts: FE_DIVBYZERO, FE_INVALID, FE_OVERFLOW
/users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/susy_gg_tt.mad/SubProcesses/P1_gg_ttx/build.hip_d_inl0_hrd1/check_hip.exe: Floating point exception
       848,357,308      cycles:u                         #    2.281 GHz                      (74.92%)
         2,367,674      stalled-cycles-frontend:u        #    0.28% frontend cycles idle     (76.36%)
         5,381,570      stalled-cycles-backend:u         #    0.63% backend cycles idle      (74.92%)
     1,420,128,933      instructions:u                   #    1.67  insn per cycle         
                                                  #    0.00  stalled cycles per insn  (74.06%)
       0.407523134 seconds time elapsed
-------------------------------------------------------------------------
runTest /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/susy_gg_tt.mad/SubProcesses/P1_gg_ttx/build.hip_d_inl0_hrd1/runTest_hip.exe
INFO: The following Floating Point Exceptions will cause SIGFPE program aborts: FE_DIVBYZERO, FE_INVALID, FE_OVERFLOW
[  PASSED  ] 4 tests.
DEBUG: MEK (no multichannel) processed 512 events across 3 channels { no-multichannel : 512 }
INFO: No Floating Point Exceptions have been reported
DEBUG: MEK (channelid array) processed 512 events across 3 channels { 1 : 192, 2 : 160, 3 : 160 }
INFO: No Floating Point Exceptions have been reported
-------------------------------------------------------------------------
cmpExe /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/susy_gg_tt.mad/SubProcesses/P1_gg_ttx/build.hip_d_inl0_hrd1/check_hip.exe --common -p 2 64 2
cmpExe /users/valassia/GPU2024/madgraph4gpu/epochX/cudacpp/susy_gg_tt.mad/SubProcesses/P1_gg_ttx/build.hip_d_inl0_hrd1/fcheck_hip.exe 2 64 2
Avg ME (C++/GPU)   = 
Avg ME (F77/GPU)   = 2.0158358666195553
  File "<string>", line 1
    me1=; me2=2.0158358666195553; reldif=abs((me2-me1)/me1); print('Relative difference =', reldif); ok = reldif <= 5E-3; print ( '%s (relative difference %s 5E-3)' % ( ('OK','<=') if ok else ('ERROR','>') ) )
        ^
SyntaxError: invalid syntax
